tests/negative/ownership_use_after_move.tx
class A {
    id: int;
}

function main() {
    let a = new A();
    a.id = 10;
    let b = a; // Move
    print(a.id); // Should be error
}
